レスポンシブ表示設定した（メニュー、swiper以外）

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="package/css/swiper.min.css">
         <link href="https://fonts.googleapis.com/css?family=Quicksand&display=swap" rel="stylesheet">
-        <meta name="viewport" content="width=device-width,initial-scale=1">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <style>
             .swiper-slide {
                 height: 569px;
@@ -135,7 +135,7 @@
             <div class="about" id="about">
                 <div class="container">
                     <h2 class="heading-title">about</h2>
-                    <div class="box-1">
+                    <div class="about-container">
                         <img src="sozai/top/about-img.png" alt="aboutimg">
                         <div class="box-p">  
                             <h3>fuka161cm</h3>
